--- a/weather-app/app.json
+++ b/weather-app/app.json
@@ -1,5 +1,13 @@
 {
   "expo": {
+    "plugins": [
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "Allow $(PRODUCT_NAME) to use your location."
+        }
+      ]
+    ],
     "name": "weather-app",
     "slug": "weather-app",
     "version": "1.0.0",
